--- a/latex/Preamble.tex
+++ b/latex/Preamble.tex
@@ -27,6 +27,8 @@
 \usepackage{fancyhdr} % Adds customization for headers and footers
 \usepackage{hyperref} % Allows links and makes references and the ToC clickable
 \usepackage[noabbrev, capitalise]{cleveref} % Easier referencing using \cref{<label>} instead of \ref{}
+%\usepackage{fancyhdr}
+%\pagestyle{fancy}
 
 \usepackage{xcolor} % Predefines additional colors and allows user defined colors
 \usepackage{tikz} % Useful for drawing images, used for creating the frontpage
@@ -63,3 +65,4 @@
 	x label style={at={(axis description cs:0.5,-0.03)}}, %legenda osi X wyśrodkowana, lekko obniżona
 	y label style={at={(axis description cs:-0.1,0.4)}}
 }
+%\fancyhead[L]{\includegraphics[width=10cm]{Figures/PP-PUT-WORD.png}}
